--- a/invite-friends.html
+++ b/invite-friends.html
@@ -13,7 +13,7 @@
 
     <div class="frens-invite">
         <div class="frens-invite-button">
-            <input type="text" value="https://t.me/DOGSclon_bot" id="link" readonly>
+            <input type="text" value="https://xmanofyared.github.io/dog/index.html/@username" id="link" readonly>
             <button id="copyButton">Copy Link</button>
         </div>
     </div>
